Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,5 @@ steps:
     location: 'East US'
     templateLocation: 'Linked artifact'
     csmFile: 'CreateWebapp/usingvariablestmp.json'
+    overrideParameters: -storagePrefix 'tester'
     deploymentMode: 'Incremental'
