--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
     location: 'East US'
     templateLocation: 'Linked artifact'
     csmFile: 'CreateWebapp/usingvariablestmp.json'
-    overrideParameters: -storagePrefix 'tester'
+    overrideParameters: -storagePrefix store
     deploymentMode: 'Incremental'
